--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-hook-phonebook-2",
+  "name": "react-redux-phonebook-2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://LinaHnidenko.github.io/react-hook-phonebook-2/",
+  "homepage": "https://LinaHnidenko.github.io/react-redux-phonebook-2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
